force-app/main/default/objects/Xpedeon_Data_Dump__c/Xpedeon_Data_Dump__c.object-meta.xml
<CustomObject>
    <label>Xpedeon Data Dump</label>
    <nameField>
        <displayFormat>XDD-{0}</displayFormat>
        <label>Xpedeon Data Dump Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Xpedeon Data Dumps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>