force-app/main/default/objects/Xpedeon_Data_Dump__c/fields/Unit_Name__c.field-meta.xml
<CustomField>
    <fullName>Unit_Name__c</fullName>
    <label>Unit Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>