force-app/main/default/objects/Xpedeon_Data_Dump__c/fields/Xpedeon_Project_Code__c.field-meta.xml
<CustomField>
    <fullName>Xpedeon_Project_Code__c</fullName>
    <label>Xpedeon Project Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>